--- a/predicate_classification/package.xml
+++ b/predicate_classification/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="carl@todo.todo">carl</maintainer>
+  <maintainer email="carl.mueller@colorado.edu">Carl Mueller</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -37,11 +37,13 @@
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
   <!-- Use build_depend for packages you need at compile time: -->
-    <build_depend>geometry_msgs</build_depend>
-    <build_depend>std_msgs</build_depend>
-    <build_depend>message_generation</build_depend>
-    <build_depend>predicate_classification_msgs</build_depend>
-    <build_depend>rostest</build_depend>
+    <depend>geometry_msgs</depend>
+    <depend>std_msgs</depend>
+    <depend>message_generation</depend>
+    <depend>message_runtime</depend>
+    <depend>predicate_classification_msgs</depend>
+    <depend>rostest</depend>
+    <depend>exception</depend>
 
 
 
@@ -50,11 +52,6 @@
   <!-- Use buildtool_depend for build tool packages: -->
   <!--   <buildtool_depend>catkin</buildtool_depend> -->
   <!-- Use exec_depend for packages you need at runtime: -->
-    <exec_depend>geometry_msgs</exec_depend>
-    <exec_depend>std_msgs</exec_depend>
-    <exec_depend>message_runtime</exec_depend>
-    <exec_depend>predicate_classification_msgs</exec_depend>
-    <exec_depend>rostest</exec_depend>
 
 
 
