--- a/predicate_classification/package.xml
+++ b/predicate_classification/package.xml
@@ -64,7 +64,6 @@
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
+    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lpredicate_classifiers"/> 
   </export>
 </package>
