--- a/predicate_classification/package.xml
+++ b/predicate_classification/package.xml
@@ -37,6 +37,7 @@
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
   <!-- Use build_depend for packages you need at compile time: -->
+    <depend>rospy</depend>
     <depend>geometry_msgs</depend>
     <depend>std_msgs</depend>
     <depend>message_generation</depend>
