--- a/predicate_classification/CMakeLists.txt
+++ b/predicate_classification/CMakeLists.txt
@@ -35,5 +35,7 @@ catkin_package(
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   add_rostest(test/predicate_classifiers.test)
+  add_rostest(test/predicate_classification_server.test)
   catkin_add_nosetests(test/predicate_classifiers_test.py)
+  catkin_add_nosetests(test/predicate_classification_server_test.py)
 endif()
